BUGFIX: Set min-height to make errors visible

--- a/Neos.Neos/Resources/Public/Styles/Login.css
+++ b/Neos.Neos/Resources/Public/Styles/Login.css
@@ -4943,7 +4943,7 @@ html,
 .neos .neos-login-box .neos-actions {
   bottom: 0;
   width: 100%;
-  height: 40px;
+  min-height: 40px;
 }
 .neos .neos-login-box .neos-actions button {
   height: 40px;
